background chapter revised based on oscar's feedback

--- a/ThesisReport/Background.tex
+++ b/ThesisReport/Background.tex
@@ -317,7 +317,7 @@ Figure \ref{fig:edgenodil} shows the detected edges obtained by applying the can
 \label{fig:edgenodil}
 \end{figure} 
 
-\subsection{Morphological Operations}
+\section{Morphological Operations}
 In addition to linear filters, there is another type of filters known as {\it non-linear filters}, whose output is a non-linear function of their input. 
 In this type of filtering, unlike linear filters, the final value of a pixel is not necessarily 
 a weighted combination of its neighboring pixels \cite{sze11}. 
@@ -343,14 +343,14 @@ The dilation and erosion operations are illustrated in figures \ref{fig:dilate} 
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.8]{diltbin}
-\caption{Dilation operation}
+\caption{Dilation operation \cite{HIPRdil}}
 \label{fig:dilate}
 \end{figure} 
 
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.8]{erodbin}
-\caption{Erosion operation}
+\caption{Erosion operation \cite{HIPRerod}}
 \label{fig:erode}
 \end{figure} 
 
@@ -363,8 +363,5 @@ detected regions.
 \caption{Dilation of the detected edges in an image}
 \label{fig:edgedil}
 \end{figure} 
-
-
-
 
 
