--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -33,6 +33,22 @@
   howpublished = "\url{http://msdn.microsoft.com/en-us/library/hh973078.aspx#Depth_Ranges}"
 }
 
+@misc{HIPRdil,
+  author = {Fisher, Robert and Perkins, Simon and Walker, Ashley and Wolfart, Erik},
+  title = {{Image Processing Learning Resources}},
+  month = August,
+  year = {2013},
+  howpublished = "\url{http://homepages.inf.ed.ac.uk/rbf/HIPR2/dilate.htm}"
+}
+
+@misc{HIPRerod,
+  author = {Fisher, Robert and Perkins, Simon and Walker, Ashley and Wolfart, Erik},
+  title = {{Image Processing Learning Resources}},
+  month = August,
+  year = {2013},
+  howpublished = "\url{http://homepages.inf.ed.ac.uk/rbf/HIPR2/erode.htm}"
+}
+
 @article{liv05,
   title={Evaluating human factors in augmented reality systems},
   author={Livingston, Mark A},
